src/objects/Datacredito_Sectores__c.object
<CustomObject>
    <fields>
        <fullName>Datacredito__c</fullName>
        <label>Datacredito</label>
        <referenceTo>Datacredito__c</referenceTo>
        <relationshipLabel>Datacreditos Sectores</relationshipLabel>
        <relationshipName>Datacreditos_Sectores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nombre__c</fullName>
        <label>Nombre</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Cooperativo__c</fullName>
        <label>Sector Cooperativo</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Financiero__c</fullName>
        <label>Sector Financiero</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Real__c</fullName>
        <label>Sector Real</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Telcos__c</fullName>
        <label>Sector Telcos</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Sectores__c</fullName>
        <label>Total Sectores</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_como_codeudor_y_otros__c</fullName>
        <label>Total como codeudor y otros</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_como_principal__c</fullName>
        <label>Total como principal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Datacredito Sectores</label>
    <nameField>
        <displayFormat>DCS-{000000}</displayFormat>
        <label>Id Datacredito Sectores</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Datacreditos Sectores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>